[gd_scene load_steps=3 format=3 uid="uid://c0oxs1jhfvv3q"]

[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://resources/theme/zude_tools_theme.tres" id="1_jcwa5"]
[ext_resource type="Script" path="res://scenes/windows/text_dialog.gd" id="2_7x6mh"]

[node name="TextDialog" type="Window"]
title = "Please enter a title."
initial_position = 2
size = Vector2i(516, 102)
wrap_controls = true
transient = true
exclusive = true
popup_window = true
theme = ExtResource("1_jcwa5")
script = ExtResource("2_7x6mh")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ProductionName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Zudecast"
placeholder_text = "Production"
alignment = 1
editable = false
expand_to_text_length = true

[node name="EpisodeNumber" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "111"
placeholder_text = "000"
alignment = 1
expand_to_text_length = true

[node name="EpisodeTitle" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Episode Title"
alignment = 1
expand_to_text_length = true

[node name="ButtonsHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
